rtpjitterbuffer: Handle seqnum gaps in TCP streams without erroring out or overflowing calculations

That is, handle DTS==GST_CLOCK_TIME_NONE correctly.

https://bugzilla.gnome.org/show_bug.cgi?id=749536